# aoc_helper

./: README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py
src/aoc_helper/: __init__.py  aoc_helper.py  aoc_helper_cui.py  types.py  utils.py
src/aoc_helper/cui/: __init__.py  cui.py  utils.py
tests/: __init__.py  main.py  test_aoc_helper.py
tests/days/: day1.py  day2.py
